Fixes to make performanceTest source generation much faster